config-root/namespaces/jx/docker-registry/docker-registry-svc.yaml
# Source: docker-registry/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: jx
  labels:
    app: docker-registry
    chart: docker-registry-2.2.2
    release: docker-registry
    heritage: Helm
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'docker-registry'
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: http-80
      targetPort: 5000
  selector:
    app: docker-registry
    release: docker-registry
